ci: test passing platform var as string

--- a/.github/workflows/shared_setup.yml
+++ b/.github/workflows/shared_setup.yml
@@ -47,10 +47,10 @@ jobs:
           if [[ ${{ vars.IOS_VAR_USE_BETA == 'true' }} ]] 
           then
             echo "IOS_SHARED_SETUP_XCODE_VERSION=${{ vars.IOS_VAR_PUBLIC_INFRA_XCODE_VERSION_BETA }}" >> $GITHUB_OUTPUT
-            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=${{ vars.IOS_VAR_SIMULATOR_VERSION_BETA }}" >> $GITHUB_OUTPUT
+            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=\"${{ vars.IOS_VAR_SIMULATOR_VERSION_BETA }}\"" >> $GITHUB_OUTPUT
           else
             echo "IOS_SHARED_SETUP_XCODE_VERSION=${{ vars.IOS_VAR_PUBLIC_INFRA_XCODE_VERSION_STABLE }}" >> $GITHUB_OUTPUT
-            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=${{ vars.IOS_VAR_SIMULATOR_VERSION_STABLE }}" >> $GITHUB_OUTPUT
+            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=\"${{ vars.IOS_VAR_SIMULATOR_VERSION_STABLE }}\"" >> $GITHUB_OUTPUT
           fi
 
 
@@ -73,10 +73,10 @@ jobs:
           if [[ ${{ vars.IOS_VAR_USE_BETA == 'true' }} ]] 
           then
             echo "IOS_SHARED_SETUP_XCODE_VERSION=${{ vars.IOS_VAR_SELF_HOSTED_XCODE_VERSION_BETA }}" >> $GITHUB_OUTPUT
-            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=${{ vars.IOS_VAR_SIMULATOR_VERSION_BETA }}" >> $GITHUB_OUTPUT
+            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=\"${{ vars.IOS_VAR_SIMULATOR_VERSION_BETA }}\"" >> $GITHUB_OUTPUT
           else
             echo "IOS_SHARED_SETUP_XCODE_VERSION=${{ vars.IOS_VAR_SELF_HOSTED_XCODE_VERSION_STABLE }}" >> $GITHUB_OUTPUT
-            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=${{ vars.IOS_VAR_SIMULATOR_VERSION_STABLE }}" >> $GITHUB_OUTPUT
+            echo "IOS_SHARED_SETUP_SIMULATOR_VERSION=\"${{ vars.IOS_VAR_SIMULATOR_VERSION_STABLE }}\"" >> $GITHUB_OUTPUT
           fi
 
 
